<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_open_in_browser_black_24dp"
            android:title="@string/nav_website" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_youtube_black_24dp"
            android:title="@string/nav_youtube" />
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_twitter_black_24dp"
            android:title="@string/nav_twitter" />
    </group>

    <group
        android:id="@+id/nav_group_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/nav_info" />
    </group>

</menu>
